--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* About the Font */
 html {
-    font-size: 10px;
-    font-family: "Chivo Mono", monospace;
+    font-size: 20px;
+    font-family: "Sedan", serif;
     font-optical-sizing: auto;
     font-style: normal;
 }
@@ -11,36 +11,45 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    font-size: 30px;
+    text-align: left;
+}
+
+h3 {
+    font-size: 20px;
+    text-align: left;
+}
+
 p,
 li {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 2;
     letter-spacing: 1px;
 }
 
 /* About the page */
 html {
-    background-color: #00539f;
+    background-color: #dfc5a4;
 }
 
 body {
-    width: 600px;
+    width: 1000px;
     margin: 0 auto;
-    background-color: #ff9500;
+    background-color: #babbbd;
     padding: 0 20px 20px 20px;
-    border: 5px solid black;
+    border: 5px solid #2E3257;
 }
 
 h1 {
     margin: 0;
     padding: 20px 0;
-    color: #00539f;
-    text-shadow: 3px 3px 1px black;
+    color: #2e3257;
+    text-shadow: 2px 2px 1px black;
 }
 
-img {
-    display: block;
-    margin: 0 auto;
-    width: 600px;
+h2 {
+    margin: 0;
+    color: #19869c;
+    text-shadow: 1px 1px 1px #2e3257;
 }
-
