--- a/styles/style.css
+++ b/styles/style.css
@@ -30,26 +30,26 @@ li {
 
 /* About the page */
 html {
-    background-color: #dfc5a4;
+    background-color: #8CB9BD ;
 }
 
 body {
     width: 1000px;
     margin: 0 auto;
-    background-color: #babbbd;
+    background-color: #fefbf6;
     padding: 0 20px 20px 20px;
-    border: 5px solid #2E3257;
+    border: 5px solid #8CB9BD;
 }
 
 h1 {
     margin: 0;
     padding: 20px 0;
-    color: #2e3257;
-    text-shadow: 2px 2px 1px black;
+    color: #B67352;
+    text-shadow: 2px 2px 1px #00171f;
 }
 
 h2 {
     margin: 0;
-    color: #19869c;
-    text-shadow: 1px 1px 1px #2e3257;
+    color: #ECB159;
+    text-shadow: 1px 1px 1px #00171f;
 }
