--- a/styles/style.css
+++ b/styles/style.css
@@ -6,50 +6,111 @@ html {
     font-style: normal;
 }
 
-h1 {
-    font-size: 60px;
-    text-align: center;
-}
-
-h2 {
-    font-size: 30px;
-    text-align: left;
-}
-
-h3 {
-    font-size: 20px;
-    text-align: left;
-}
-
-p,
-li {
-    font-size: 20px;
-    line-height: 2;
-    letter-spacing: 1px;
-}
-
 /* About the page */
 html {
-    background-color: #8CB9BD ;
+    background-color: #fefbf6 ;
+    text-align: justify;
 }
 
+a:link {
+    color: #8CB9BD;
+}
+
+a:visited {
+    color: cornflowerblue;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+/* The header */
+header {
+    margin: 50px 50px 50px 50px;
+    padding: 10px;
+}
+
+header #head {
+    text-align: left;
+    font-size: 40px;
+    color: #B67352;
+}
+
+/* The navigation bar */
+nav {
+    margin: 50px 50px 50px 50px;
+    padding: 10px;
+    border: 2px solid #B67352;
+    background-color: blanchedalmond;
+}
+
+nav #menu {
+    text-align: left;
+    font-size: 30px;
+    color: #B67352;
+}
+
+nav .searchBar {
+    float: right;
+}
+
+nav .selection {
+    text-align: justify;
+    text-align-last: justify;
+}
+
+nav button {
+    margin: 10px 10px 10px 10px;
+    border: 1px solid #ECB159;
+    background-color: beige;
+}
+
+nav button:hover {
+    background-color: aliceblue;
+}
+
+/* The body page */
 body {
-    width: 1000px;
-    margin: 0 auto;
-    background-color: #fefbf6;
-    padding: 0 20px 20px 20px;
-    border: 5px solid #8CB9BD;
+    margin: 50px 50px 50px 50px;
+    padding: 10px;
 }
 
-h1 {
+body h1 {
+    font-size: 60px;
+    text-align: center;
     margin: 0;
     padding: 20px 0;
     color: #B67352;
     text-shadow: 2px 2px 1px #00171f;
 }
 
-h2 {
+body h2 {
+    font-size: 30px;
+    text-align: left;
     margin: 0;
     color: #ECB159;
-    text-shadow: 1px 1px 1px #00171f;
+    text-shadow: 1px 1px 1px #B67352;
+}
+
+body h3 {
+    font-size: 20px;
+    text-align: left;
+}
+
+body p,
+body li {
+    font-size: 20px;
+    line-height: 2;
+    letter-spacing: 1px;
+}
+
+/* The footer */
+footer {
+    margin: 50px 50px 50px 50px;
+    padding: 10px;
+    border-top: 5px solid #ECB159;
+}
+
+footer h3 {
+    text-align: center;
 }
